.kiro/specs/iac-hygiene-remediation/artifacts/task-25.4-25.6-authentik-finalize-20260902/default__networkpolicy__allow-ingress-cloudflared.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-ingress-cloudflared","namespace":"default"},"spec":{"ingress":[{"from":[{"namespaceSelector":{}}]}],"podSelector":{"matchLabels":{"app":"authentik"}},"policyTypes":["Ingress"]}}
  creationTimestamp: "2026-08-30T08:28:20Z"
  generation: 1
  name: allow-ingress-cloudflared
  namespace: default
  resourceVersion: "64781266"
  uid: d14b921e-6fc1-4d3d-829d-f79e5dc900cd
spec:
  ingress:
  - from:
    - namespaceSelector: {}
  podSelector:
    matchLabels:
      app: authentik
  policyTypes:
  - Ingress
